--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 
 <body>
 
+
+
 <div id="list">
 
 <h1>Songs Selection</h1>
 
 </div>
 
-
 <div id="player">
+
+  <div id="animateBars">
+
+  </div>
 
 <div id="previousTrack">
   <img src="prev.png" class="buttons"/>
