added pause and stop functionality

--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
   <img src="prev.png" class="buttons"/>
 </div>
 
+<div id="pauseTrack">
+  <img src="pause.png" class="buttons"/>
+</div>
+
 <div  id="playTrack">
   <img src="play.png" class="buttons"/>
+</div>
+
+<div id="stopTrack">
+  <img src="stop.png" class="buttons"/>
 </div>
 
 <div id="nextTrack">
