added random song generation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
 <h1>Songs Selection</h1>
 
+<div id="randomTrack">
+
+  <img src="random.png" class="buttons"/>
+</div>
+
 </div>
 
 <div id="player">
@@ -43,6 +48,8 @@
 <div id="nextTrack">
   <img src="next.png" class="buttons"/>
 </div>
+
+
 
 </div>
 </body>
