--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+Author: Faisal Khan
+Dated: June 13 2016
+
+An Mp3 player without using the built in player
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,24 +15,31 @@
 </head>
 
 <body>
-
-
+  <!--
+  The div containing the songs list populated through java script
+-->
 <div id="list">
 
-<h1>Songs Selection</h1>
-
+  <h1>Songs Selection</h1>
+  <!--
+  The div containing the red dice image to generate random track
+-->
 <div id="randomTrack">
-
   <img src="random.png" class="buttons"/>
 </div>
 
 </div>
 
+<!--
+The div containing all the media button as images
+-->
 <div id="player">
+  <!--
+  The div containing the animation which is enabled and disabled using javascript
+-->
+<div id="animateBars">
 
-  <div id="animateBars">
-
-  </div>
+</div>
 
 <div id="previousTrack">
   <img src="prev.png" class="buttons"/>
