--- a/index.html
+++ b/index.html
@@ -10,57 +10,66 @@ An Mp3 player without using the built in player
   <meta charset="UTF-8">
   <title>Juke Box</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="script.js"></script>
-</head>
+ </head>
 
 <body>
+
+  <input type="file" onchange="ChangeBackground(this);" />
+  
+  <div id="uploadedFile">
+  </div>
+
   <!--
-  The div containing the songs list populated through java script
--->
-<div id="list">
+    The div containing the songs list populated through javascript
+  -->
 
-  <h1>Songs Selection</h1>
+  <div id="list">
+
+    <h1>Songs Selection</h1>
+    <!--
+    The div containing the red dice image to generate random track
+  -->
+  <div id="randomTrack">
+    <img src="random.png" class="buttons"/>
+  </div>
+
+  </div>
+
   <!--
-  The div containing the red dice image to generate random track
--->
-<div id="randomTrack">
-  <img src="random.png" class="buttons"/>
-</div>
+  The div containing all the media button as images
+  -->
+  <div id="player">
+    
+  <div id="animateBars">
+    <!--
+    The div containing the animation which is enabled and disabled using javascript
+    -->
+  </div>
 
-</div>
+  <div id="previousTrack">
+    <img src="prev.png" class="buttons"/>
+  </div>
 
-<!--
-The div containing all the media button as images
--->
-<div id="player">
-  <!--
-  The div containing the animation which is enabled and disabled using javascript
--->
-<div id="animateBars">
+  <div id="pauseTrack">
+    <img src="pause.png" class="buttons"/>
+  </div>
 
-</div>
+  <div  id="playTrack">
+    <img src="play.png" class="buttons"/>
+  </div>
 
-<div id="previousTrack">
-  <img src="prev.png" class="buttons"/>
-</div>
+  <div id="stopTrack">
+    <img src="stop.png" class="buttons"/>
+  </div>
 
-<div id="pauseTrack">
-  <img src="pause.png" class="buttons"/>
-</div>
+  <div id="nextTrack">
+    <img src="next.png" class="buttons"/>
+  </div>
 
-<div  id="playTrack">
-  <img src="play.png" class="buttons"/>
-</div>
+  </div>
 
-<div id="stopTrack">
-  <img src="stop.png" class="buttons"/>
-</div>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+   <script src="script.js"></script>
 
-<div id="nextTrack">
-  <img src="next.png" class="buttons"/>
-</div>
-
-</div>
 </body>
 </html>
