added structure to the files

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@ An Mp3 player without using the built in player
 <head>
   <meta charset="UTF-8">
   <title>Juke Box</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/style.css">
  </head>
 
 <body>
@@ -30,7 +30,7 @@ An Mp3 player without using the built in player
     The div containing the red dice image to generate random track
   -->
   <div id="randomTrack">
-    <img src="random.png" class="buttons"/>
+    <img src="../images/random.png" class="buttons"/>
   </div>
 
   </div>
@@ -47,29 +47,29 @@ An Mp3 player without using the built in player
   </div>
 
   <div id="previousTrack">
-    <img src="prev.png" class="buttons"/>
+    <img src="../images/prev.png" class="buttons"/>
   </div>
 
   <div id="pauseTrack">
-    <img src="pause.png" class="buttons"/>
+    <img src="../images/pause.png" class="buttons"/>
   </div>
 
   <div  id="playTrack">
-    <img src="play.png" class="buttons"/>
+    <img src="../images/play.png" class="buttons"/>
   </div>
 
   <div id="stopTrack">
-    <img src="stop.png" class="buttons"/>
+    <img src="../images/stop.png" class="buttons"/>
   </div>
 
   <div id="nextTrack">
-    <img src="next.png" class="buttons"/>
+    <img src="../images/next.png" class="buttons"/>
   </div>
 
   </div>
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-   <script src="script.js"></script>
+   <script src="../javaScript/script.js"></script>
 
 </body>
 </html>
